# vector-db-from-scratch

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  fix2.py  fix3.py  fix4.py  fix_methods.py  project report.md  project spec.md  project_audit_report.md
.agents/: ORIGINAL_REQUEST.md
.agents/explorer_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  plan.md  progress.md
.agents/reviewer_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/reviewer_m1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/worker_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/worker_m1_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/worker_m1_v2/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html
vectordb-bench/: Cargo.toml  compare_faiss.py  download_sift1m.py  milestone1_verify.py
vectordb-core/: Cargo.toml
vectordb-core/src/: collection.rs  concurrent_hnsw.rs  distance.rs  error.rs  filter.rs  hnsw.rs  lib.rs  planner.rs  pq.rs  snapshot.rs  storage.rs  wal.rs
vectordb-core/tests/: debug_recall.rs  flaw_audit_gate.rs  milestone1_gate.rs  milestone2_gate.rs  milestone3_gate.rs  milestone4_gate.rs  milestone5_gate.rs  milestone8_gate.rs  phase3_persistence_test.rs
vectordb-server/: Cargo.toml
vectordb-server/src/: api.rs  lib.rs  main.rs
vectordb-server/tests/: milestone6_gate.rs  milestone7_gate.rs  milestone8_gate.rs
(+4 files in other folders)
