[package]
name = "vectordb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crc32fast = "1.3"
parking_lot = "0.12"
rand = "0.8"
roaring = "0.10"
rayon = "1.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
