[package]
name = "vectordb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
vectordb-core = { path = "../vectordb-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
